--- a/recipes/styles2.css
+++ b/recipes/styles2.css
@@ -1,4 +1,4 @@
-h1 {
+.Title1 {
     color: red;
     background-color: white;
     font-size: 40px;
@@ -7,3 +7,48 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   }
+
+  .Title2 {
+    color: green;
+    background-color: white;
+    font-size: 40px;
+    text-align: left;
+    text-emphasis: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+  }
+
+  .Title3 {
+    color: orange;
+    background-color: white;
+    font-size: 40px;
+    text-align: left;
+    text-emphasis: bold;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+
+  }
+
+  .Title4 {
+    color: red;
+    background-color: white;
+    text-align: left;
+    font-family: Papyrus, Times, serif;
+
+  }
+
+  .Title5 {
+    color: green;
+    background-color: white;
+    text-align: left;
+    font-family: Papyrus, Times, serif;
+    
+  }
+
+  .Title6 {
+    color: orange;
+    background-color: white;
+    text-align: left;
+    font-family: Papyrus, Times, serif;
+    
+  }
+
