--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 h1 {
-    color: green;
+    color: purple;
     background-color: white;
     font-size: 40px;
     text-align: center;
@@ -7,12 +7,23 @@ h1 {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   }
-  
+
 li {
     color: black;
-    background-color: rgb(118, 223, 200);
-    font-size: 20px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: white;
+    font-family: "Lucida Console", "Courier New", monospace;
     text-align: center;
+    font-size: 30px;
 
+  }
+
+  ul {
+    list-style-type: none;
+  }
+
+  .Chef {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }
