--- a/recipes/styles2.css
+++ b/recipes/styles2.css
@@ -1,54 +1,47 @@
-.Title1 {
-    color: red;
+.Title1,
+.Title2,
+.Title3 {
     background-color: white;
     font-size: 40px;
     text-align: left;
     text-emphasis: bold;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+  .Title1 {
+    color: red;
 
   }
 
   .Title2 {
     color: green;
-    background-color: white;
-    font-size: 40px;
-    text-align: left;
-    text-emphasis: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 
   }
 
   .Title3 {
     color: orange;
-    background-color: white;
-    font-size: 40px;
-    text-align: left;
-    text-emphasis: bold;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+ 
+  }
 
+  .Title4,
+  .Title5,
+  .Title6 {
+    background-color: white;
+    text-align: left;
+    font-family: Papyrus, Times, serif;
   }
 
   .Title4 {
     color: red;
-    background-color: white;
-    text-align: left;
-    font-family: Papyrus, Times, serif;
 
   }
 
   .Title5 {
     color: green;
-    background-color: white;
-    text-align: left;
-    font-family: Papyrus, Times, serif;
-    
+
   }
 
   .Title6 {
     color: orange;
-    background-color: white;
-    text-align: left;
-    font-family: Papyrus, Times, serif;
-    
+ 
   }
-
